wip: start work on jwt token based auth
