# swagger.json
@@ -135,6 +135,29 @@
           }
         }
       }
+    },
+    "/auth/generate-password-hash": {
+      "get": {
+        "summary": "Generates a salt and hashes the given password using that salt.",
+        "description": "Generates a salt and hashes the given password using that salt. Pass cleartext password as query parameter.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "password",
+            "required": true,
+            "type": "string",
+            "description": "The cleartext password that should be hashed"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Hashed password and salt",
+            "schema": {
+              "type": "object"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
